readmeを追加, ブラウザでのリアルタイム確認を実装

--- a/index.html
+++ b/index.html
@@ -4,26 +4,118 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title></title>
+        <script src="https://cdn.jsdelivr.net/gh/neknaj/cDom/cdom.js"></script>
+        <script src="https://cdn.jsdelivr.net/gh/neknaj/webSplitLayout/type1/layout.js"></script>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/neknaj/webSplitLayout/type1/layout.css"></head>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/luna-object-viewer/luna-object-viewer.css" />
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/luna-data-grid/luna-data-grid.css" />
         <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/luna-console/luna-console.css" />
         <script src="https://cdn.jsdelivr.net/npm/luna-object-viewer/luna-object-viewer.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/luna-data-grid/luna-data-grid.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/luna-console/luna-console.js"></script>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/styles/github-dark.min.css">
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/highlight.min.js"></script>
     </head>
     <body>
-        <div id="console-container" class="luna-console-theme-dark"></div>
+        <div id="background"><img src="spec/logo/npl-all2.png"></img></div>
+        <div id="layoutroot"></div>
     </body>
 </html>
 <script>
-    const console = new LunaConsole(document.getElementById('console-container'))
+
+
+initlayout(
+    document.querySelector("#layoutroot"),
+    ["h",[1,5],[
+        ["c","luna"],
+        ["v",[1,4],[["c","editor"],["c","result"]]]
+    ]],
+    {
+        luna: ()=>{return elm("div",{id:"console-container",class:"luna-console-theme-dark"},[])},
+        editor: ()=>{return elm("textarea",{id:"input"},[])},
+        result: ()=>{return elm("div",{id:"result"},[])},
+    }
+)
+const console = new LunaConsole(document.getElementById('console-container'))
+
+</script>
+<script type="module">
+import { Input, sequence, choice, many, many1, optional, char, string, proc, join, label } from "./dist/parserCombinator.js";
+
+    const expr = state => choice(int, proc(sequence(char("("), many(sep), operator, many1(sep), expr, many1(sep), expr, many(sep), char(")")), x => [x[2], x[4], x[6]]))(state);
+    const sep = choice(char(" "),char("\n"));
+
+    const operator = choice(char("+"),char("-"),char("*"),char("/"))
+    const digit = char(/^[0-9]$/);
+    const sign = choice(char("+"),char("-"));
+    const int = label("int",proc(join(sequence(
+        optional(sign,""),
+        join(many1(digit)),
+    )),Number));
+
+    function run() {
+        let input = document.querySelector("#input").value;
+        let res = expr(Input(input));
+        let code = JSON.stringify(res,null,4);
+
+            const codeBlock = document.createElement('pre');
+            const codeElement = document.createElement('code');
+            codeElement.className = 'language-json';
+            codeElement.textContent = code;
+
+            codeBlock.appendChild(codeElement);
+            document.getElementById('result').innerHTML = "";
+            document.getElementById('result').Add(codeBlock);
+
+            hljs.highlightElement(codeElement);
+    }
+
+const sampleCode = `( +
+    (* 1 2)
+    (- 2 3)
+)`
+document.querySelector("#input").value = sampleCode;
+
+    document.querySelector("#input").Listen("input",run)
+    run();
 </script>
 <script type="module" src="dist/parser.js"></script>
 <style>
     :root {
         color-scheme: dark;
+        background-color: black;
+        user-select: none;
     }
-    canvas {
-        border: 1px solid white;
+    body {
+        margin: 0;
+        padding: 0;
+        height: 100dvh;
+        width: 100dvw;
+        overflow: hidden;
+    }
+    .luna-console.luna-console-theme-dark, .hljs {
+        background-color: rgba(0, 0, 0, 0);
+    }
+    #background {
+        z-index: -1;
+        position: absolute;
+        top: 0;
+        left: 0;
+        opacity: 5%;
+        & img {
+            user-select: none;
+            width: 100dvw;
+            height: 100dvh;
+        }
+    }
+    #layoutroot {
+        height: 100%;
+        width: 100%;
+    }
+    #input {
+        height: 100%;
+        width: 100%;
+        border: 0;
+        background-color: rgba(0, 0, 0, 0.0);
     }
 </style>
