--- a/index.html
+++ b/index.html
@@ -40,15 +40,15 @@ const console = new LunaConsole(document.getElementById('console-container'))
 
 </script>
 <script type="module">
-import { Input, sequence, choice, many, many1, optional, char, string, proc, join, label } from "./dist/parserCombinator.js";
+import { Input, sequence, choice, many, many1, optional, char, string, regex, proc, join, node } from "./dist/parserCombinator.js";
 
     const expr = state => choice(int, proc(sequence(char("("), many(sep), operator, many1(sep), expr, many1(sep), expr, many(sep), char(")")), x => [x[2], x[4], x[6]]))(state);
     const sep = choice(char(" "),char("\n"));
 
     const operator = choice(char("+"),char("-"),char("*"),char("/"))
-    const digit = char(/^[0-9]$/);
+    const digit = regex(/^[0-9]/);
     const sign = choice(char("+"),char("-"));
-    const int = label("int",proc(join(sequence(
+    const int = node("int",proc(join(sequence(
         optional(sign,""),
         join(many1(digit)),
     )),Number));
